update to Java 17 and JavaFX 20